update swagger then add changePassword
