# swagger-output.json
@@ -5,6 +5,25 @@
     "description": "A demo for simple school system API",
     "version": "1.0.0"
   },
+  "tags": [
+    {
+      "name": "children",
+      "description": "Operations related to children"
+    },
+    {
+      "name": "classes",
+      "description": "Operations related to classes"
+    },
+    {
+      "name": "teachers",
+      "description": "Operations related to teachers"
+    }
+    ,
+    {
+      "name": "login",
+      "description": "Operations related to login"
+    }
+  ],
   "host": "localhost:4000",
   "basePath": "/",
   "schemes": [
@@ -13,7 +32,10 @@
   "paths": {
     "/children": {
       "get": {
-        "description": "",
+        "tags": [
+          "children"
+        ],
+        "description": "Retrieves all children",
         "responses": {
           "200": {
             "description": "OK"
@@ -21,15 +43,36 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "children"
+        ],
+        "description": "Adds a new child",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Child object that needs to be added",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "$ref": "#/definitions/Child"
+            }
+          }
+        ],
         "responses": {
           "default": {
-            "description": ""
+            "description": "Successful operation"
           }
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "children"
+        ],
+        "description": " Updates a child",
         "parameters": [
           {
             "name": "id",
@@ -59,6 +102,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "children"
+        ],
         "description": "",
         "parameters": [
           {
@@ -76,7 +122,10 @@
     },
     "/children/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "children"
+        ],
+        "description": "Retrieves chlid by id ",
         "parameters": [
           {
             "name": "id",
@@ -94,7 +143,10 @@
     },
     "/class": {
       "get": {
-        "description": "",
+        "tags": [
+          "classes"
+        ],
+        "description": "Retrieves all classes",
         "responses": {
           "200": {
             "description": "OK"
@@ -102,7 +154,10 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "classes"
+        ],
+        "description": " Adds a new class",
         "parameters": [
           {
             "name": "body",
@@ -130,7 +185,11 @@
         }
       },
       "put": {
-        "description": "",
+        
+        "tags": [
+          "classes"
+        ],
+        "description": " Updates a class",
         "parameters": [
           {
             "name": "body",
@@ -152,7 +211,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "classes"
+        ],
+        "description": " Deletes a class",
         "parameters": [
           {
             "name": "body",
@@ -176,7 +238,10 @@
     },
     "/class/{id}": {
       "get": {
-        "description": "",
+        "tags": [
+          "classes"
+        ],
+        "description": " Retrives a class by id",
         "parameters": [
           {
             "name": "id",
@@ -193,7 +258,11 @@
       }
     },
     "/class/child/{id}": {
+      
       "get": {
+        "tags": [
+          "classes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -211,7 +280,11 @@
       }
     },
     "/class/teacher/{id}": {
+      
       "get": {
+        "tags": [
+          "classes"
+        ],
         "description": "",
         "parameters": [
           {
@@ -229,24 +302,58 @@
       }
     },
     "/login": {
-      "get": {
-        "description": "",
+      "post": {
+        "tags": [
+          "login"
+        ],
+        "description": "Endpoint for user login.",
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Login credentials",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "example": "ebrahim@example.com"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "123"
+                }
+              },
+              "required": [
+                "email",
+                "password"
+              ]
+            }
+          }
+        ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "Login successful."
           },
           "404": {
-            "description": "Not Found"
+            "description": "User not found."
           },
           "500": {
-            "description": "Internal Server Error"
+            "description": "Internal Server Error."
           }
         }
       }
-    },
+    },    
     "/teachers": {
       "get": {
-        "description": "",
+        "tags": [
+          "teachers"
+        ],
+        "description": " Retrives all teachers",
         "responses": {
           "200": {
             "description": "OK"
@@ -254,6 +361,9 @@
         }
       },
       "post": {
+        "tags": [
+          "teachers"
+        ],
         "description": "",
         "parameters": [
           {
@@ -285,7 +395,10 @@
         }
       },
       "put": {
-        "description": "",
+        "tags": [
+          "teachers"
+        ],
+        "description": " Updates a teacher",
         "parameters": [
           {
             "name": "id",
@@ -300,7 +413,10 @@
         }
       },
       "delete": {
-        "description": "",
+        "tags": [
+          "teachers"
+        ],
+        "description": " Deletes a teacher",
         "parameters": [
           {
             "name": "id",
@@ -316,7 +432,11 @@
       }
     },
     "/teachers/{id}": {
+      
       "get": {
+        "tags": [
+          "teachers"
+        ],
         "description": "",
         "parameters": [
           {
@@ -334,7 +454,11 @@
       }
     },
     "/register": {
+      
       "post": {
+        "tags": [
+          "login"
+        ],
         "description": "",
         "parameters": [
           {
@@ -355,6 +479,12 @@
                 "email": {
                   "example": "any"
                 }
+                ,
+                "profileImage": {
+                  "example": "any"
+                }
+                
+
               }
             }
           }
